# liver-iri

./: README.md  makefile  pyproject.toml
.github/workflows/: build.yml  pytest.yml
archive/final_figure_overhaul/: figure2.py
archive/manuscript_figures/: figure3d.py  figure6.py
archive/manuscript_overhaul/: figure4.py
liver_iri/: dataimport.py  predict.py  tensor.py  utils.py
liver_iri/data/: balanced_meta.csv  cytokine_20201120.csv  cytokine_minimums.csv  cytokines.csv  cytokines_no_missing.csv  cytokines_validation.csv  lft_scores.csv  lft_scores_no_missing.csv  lft_scores_validation.csv  patient_meta.csv  patient_meta_no_missing.csv  patient_meta_validation.csv
liver_iri/figures/: common.py  figure1.py  figure1a.py  figure1b.py  figure1c.py  figure1dehi.py  figure1fgjk.py  figure2.py  figure2a.py  figure2b.py  figure2c.py  figure3.py  figure3a.py  figure3b.py  figure3c.py  figure3d.py  figure3e.py  figure4.py  figure4a.py  figure4b.py  figure5.py  figure6.py  figure6a.py  figure6b.py  figure6c.py  figure6d.py  figureFMS.py  figureS1.py  figureS10.py  figureS2.py  figureS3.py  figureS4.py  figureS6.py  figureS8.py  figureS9.py
liver_iri/test/: test_dataimport.py
