[tool.poetry]
name = "liver-iri"
version = "0.1.0"
description = ""
authors = ["Jackson L. Chin <JacksonLymanChin@gmail.com>", "Cyrillus <cyztan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.23.1"
scipy = "^1.8.1"
tensorly = "^0.8"
pandas = "^1.4.3"
xarray = "^2022.6.0"
svgutils = "^0.3.4"
tensorpack = { git = "https://github.com/meyer-lab/tensorpack.git", branch = "python_update" }
cmtf-pls = { git = "https://github.com/meyer-lab/cmtf-pls.git", branch = "complete_missing" }
scikit-learn = "^1.1.1"
imbalanced-learn = "^0.11.0"
statsmodels = "^0.14.1"
lifelines = "^0.28.0"
setuptools = "^69.5.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fbuild = "liver_iri.figures.common:genFigure"

[tool.black]
line-length = 80
